// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`common/Navigation graphical (JSX) should add custom className 1`] = `
<div
  className="navigation custom"
  style={Object {}}
/>
`;

exports[`common/Navigation graphical (JSX) should add custom style 1`] = `
<div
  className="navigation"
  style={
    Object {
      "backgroundColor": "red",
    }
  }
/>
`;

exports[`common/Navigation graphical (JSX) should handle multiple steps 1`] = `
<div
  className="navigation"
  style={Object {}}
>
  <div
    className="step"
  >
    {"name":"step","props":{"number":0,"last":false,"children":"step 1"}}
  </div>
  <div
    className="step"
  >
    {"name":"step","props":{"number":1,"last":true,"children":"step 2"}}
  </div>
</div>
`;

exports[`common/Navigation graphical (JSX) should handle one step 1`] = `
<div
  className="navigation"
  style={Object {}}
>
  <div
    className="step"
  >
    {"name":"step","props":{"number":0,"last":true,"children":"step 1"}}
  </div>
</div>
`;

exports[`common/Navigation graphical (JSX) should have a default behaviour 1`] = `
<div
  className="navigation"
  style={Object {}}
/>
`;
